fix about/contact banner padding on mobile

--- a/app/assets/stylesheets/beyondmiles.css
+++ b/app/assets/stylesheets/beyondmiles.css
@@ -1,7 +1,7 @@
 .page-banner {
 	background-image: url('http://beyondmiles.herokuapp.com/imgs/org-banner.png');
 	height: 300px;
-	/*padding-top: 120px;*/
+	padding-top: 120px;
 	margin-bottom: 35px;
 	background-size: 100% auto;
 	background-repeat: no-repeat;
@@ -10,7 +10,14 @@
 @media(max-width: 767px){
 	.page-banner { 
 		height: 150px;
+	}
+
+	.about {
 		padding-top: 20px;
+	}
+
+	.contact {
+		padding-top: 30px;
 	}
 }
 
